<resources>
    <string name="app_name">call_center_driver_app</string>

    <!--    login screen-->

    <string name="login_account_field">Your email</string>
    <string name="login_password_field">Password</string>
    <string name="login_goto_signup_link">Havenot had an account</string>
    <string name="login_login_button">Login</string>

    <!--    login screen-->

    <!--    signup screen-->

    <string name="signup_name_field">Your name</string>
    <string name="signup_email_field">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="signup_phone_number">Your phone</string>
    <string name="signup_goto_login_link">Have had an account</string>
    <string name="signup_signup_button">Sign up now!</string>

    <!--    signup screen -->

    <!--    main screen-->

    <string name="main_bottom_nav_home">Home</string>
    <string name="main_bottom_nav_notification">Notification</string>
    <string name="main_bottom_nav_account">Account</string>

    <!--    main screen-->

    <!--home-->

    <string name="home_handling_task">Handling task</string>
    <string name="home_task_customername">Customer name</string>
    <string name="home_task_from">From:</string>
    <string name="home_task_to">To:</string>
    <string name="home_task_total">Total:</string>
    <string name="home_task_schedule">Schedule:</string>
    <string name="home_task_distance">Distance:</string>
    <string name="home_task_vnd">VND</string>
    <string name="home_task_km">KM</string>
    <string name="home_task_no_available_handling_task">Not Available</string>

    <string name="home_available_task">Available tasks</string>

    <string name="home_available_task_accept_task_button">Get it</string>
    <string name="home_available_task_deny_task_button">Deny</string>

    <!--home-->

<!--    server-->
    <string name="server_url">localhost:7090/driver/</string>
    <string name="DATABASE_ACCESS_DRIVER_INFO_COLLECTION">driver</string>
<!--    server-->

</resources>