<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/signup_name_field"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/signup_email_field"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/signup_password"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/signup_confirm_password"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/signup_phone_number"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_phone_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="phone"
            />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_goto_login_link"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/signup_goto_login_link"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:gravity="center_vertical"
                android:layout_marginRight="35dp"
                app:backgroundTint="@color/white"
                android:contentDescription="@string/signup_goto_login_link"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_signup_button"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/signup_signup_button"
                android:background="@drawable/pill_shape_50per"
                android:gravity="center_vertical"
                android:contentDescription="@string/signup_signup_button"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>