<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/login_account_field"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_account_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/login_account_field" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/login_password_field"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/login_password_field"
            android:inputType="textPassword"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_goto_signup_link"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:clickable="true"
                android:text="@string/login_goto_signup_link"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColorHighlight="@color/cardview_dark_background"
                android:gravity="center_vertical"
                android:layout_marginRight="40dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_login_button"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/login_login_button"
                android:background="@drawable/pill_shape_50per"
                android:layout_gravity="center_vertical"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>