<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.Call_center_driver_app">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/home_handling_task"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_task_no_available_handling_task"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_handling_task_block"
        android:clickable="true"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pill_shape_15per"
        android:backgroundTint="@color/customColor1"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        android:orientation="vertical">
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_handling_task_customername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_task_customername"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/point_48px"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_task_from"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:paddingLeft="8dp"
                android:id="@+id/home_handling_task_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="123, phuong 21, quan Binh Thanh, HCM"
                android:textSize="16sp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:gravity="end"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/location_on_48px"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/customColor2"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_task_to"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:paddingLeft="8dp"
                android:id="@+id/home_handling_task_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="227 Nguyen Van Cu, quan 5, tp HCM"
                android:textSize="16sp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:gravity="end"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/receipt_long_48px"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_task_total"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/home_handling_task_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25000"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:textColor="@color/black"/>
                <com.google.android.material.textview.MaterialTextView
                    android:paddingLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_task_vnd"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:maxLines="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/schedule_48px"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_task_schedule"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:paddingLeft="8dp"
                android:id="@+id/home_handling_task_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="None"
                android:gravity="end"
                android:textSize="16sp"
                android:maxLines="1"
                android:textColor="@color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/show_chart_48px"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/home_task_distance"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/home_handling_task_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6.5"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:gravity="end"
                    android:textColor="@color/black"/>

                <com.google.android.material.textview.MaterialTextView
                    android:paddingLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_task_km"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:gravity="end"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
        
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginHorizontal="30dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/home_available_task"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_task_no_available_handling_task"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pill_shape_15per"
        android:backgroundTint="@color/customColor3"
        android:layout_marginBottom="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_available_tasks_recyclerview"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>